<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlHomeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myhistorycleaner.Activity.HomeScreenActivity">

    <LinearLayout
        android:id="@+id/llHomeBoost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibBoost"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tvHome_marginTop"
            app:srcCompat="@drawable/boost_icon" />

        <com.example.myhistorycleaner.Custom.CustomTextView
            android:id="@+id/tvClearedCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_style"
            android:text="@string/Cache"
            android:textColor="@color/textColor"
            android:textSize="@dimen/tvHome_textSize"
            app:custom_font="avenirLight" />

        <com.example.myhistorycleaner.Custom.CustomTextView
            android:id="@+id/tvMemoryBoost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/tvHome_marginBottom"
            android:layout_marginTop="@dimen/tvHome_marginTop"
            android:background="@drawable/border_style"
            android:text="@string/Memory"
            android:textColor="@color/textColor"
            android:textSize="@dimen/tvHome_textSize"
            app:custom_font="avenirLight" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/llHomeBoost"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">


        <com.example.myhistorycleaner.Custom.CustomButton
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCallLog"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/btnGallery"
            android:layout_toRightOf="@+id/btnGallery"
            android:background="@drawable/video_icon"
            android:fitsSystemWindows="true"

            android:gravity="bottom|center"
            android:padding="20dp"
            android:paddingBottom="20dp"
            android:text="@string/Video"
            android:textColor="@color/borderColor"
            app:custom_font="avenirLight" />

        <com.example.myhistorycleaner.Custom.CustomButton
            android:id="@+id/btnSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnVideo"
            android:layout_alignLeft="@+id/btnVideo"
            android:layout_alignStart="@+id/btnVideo"
            android:background="@drawable/sms_icon"
            android:fitsSystemWindows="true"
            android:gravity="bottom|center"

            android:padding="20dp"
            android:paddingBottom="20dp"
            android:text="@string/Sms"
            android:textColor="@color/borderColor"
            app:custom_font="avenirLight" />

        <com.example.myhistorycleaner.Custom.CustomButton
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/gallery_icon"
            android:fitsSystemWindows="true"
            android:gravity="bottom|center"
            android:padding="20dp"

            android:paddingBottom="20dp"
            android:text="@string/Gallery"
            android:textColor="@color/borderColor"
            app:custom_font="avenirLight" />

        <com.example.myhistorycleaner.Custom.CustomButton
            android:id="@+id/btnCallLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGallery"
            android:layout_alignEnd="@+id/btnGallery"
            android:layout_alignRight="@+id/btnGallery"
            android:background="@drawable/call_log_icon"
            android:fitsSystemWindows="true"

            android:gravity="bottom|center"
            android:padding="20dp"
            android:paddingBottom="20dp"
            android:text="@string/CallHistory"
            android:textColor="@color/borderColor"
            app:custom_font="avenirLight" />


    </RelativeLayout>
</RelativeLayout>
